@@ -32,6 +32,66 @@ name|LuceneTestCase
 import|;
 end_import
 
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|ByteArrayInputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|ByteArrayOutputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|ObjectInput
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|ObjectInputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|ObjectOutput
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|ObjectOutputStream
+import|;
+end_import
+
 begin_class
 DECL|class|TestRegExp
 specifier|public
@@ -159,6 +219,126 @@ name|source
 argument_list|)
 operator|)
 assert|;
+block|}
+block|}
+comment|// LUCENE-6713
+DECL|method|testSerializeTooManyStatesToDeterminizeExc
+specifier|public
+name|void
+name|testSerializeTooManyStatesToDeterminizeExc
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// LUCENE-6046
+name|String
+name|source
+init|=
+literal|"[ac]*a[ac]{50,200}"
+decl_stmt|;
+try|try
+block|{
+operator|new
+name|RegExp
+argument_list|(
+name|source
+argument_list|)
+operator|.
+name|toAutomaton
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|TooComplexToDeterminizeException
+name|e
+parameter_list|)
+block|{
+assert|assert
+operator|(
+name|e
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+name|source
+argument_list|)
+operator|)
+assert|;
+name|ByteArrayOutputStream
+name|bos
+init|=
+operator|new
+name|ByteArrayOutputStream
+argument_list|()
+decl_stmt|;
+name|ObjectOutput
+name|out
+init|=
+operator|new
+name|ObjectOutputStream
+argument_list|(
+name|bos
+argument_list|)
+decl_stmt|;
+name|out
+operator|.
+name|writeObject
+argument_list|(
+name|e
+argument_list|)
+expr_stmt|;
+name|byte
+index|[]
+name|bytes
+init|=
+name|bos
+operator|.
+name|toByteArray
+argument_list|()
+decl_stmt|;
+name|ByteArrayInputStream
+name|bis
+init|=
+operator|new
+name|ByteArrayInputStream
+argument_list|(
+name|bytes
+argument_list|)
+decl_stmt|;
+name|ObjectInput
+name|in
+init|=
+operator|new
+name|ObjectInputStream
+argument_list|(
+name|bis
+argument_list|)
+decl_stmt|;
+name|TooComplexToDeterminizeException
+name|e2
+init|=
+operator|(
+name|TooComplexToDeterminizeException
+operator|)
+name|in
+operator|.
+name|readObject
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|e2
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 comment|// LUCENE-6046
